add streamlit app for reverse image search

--- a/reverse_image_search/Dockerfile
+++ b/reverse_image_search/Dockerfile
@@ -1,5 +1,6 @@
 # This is the Dockerfile for preparing pre-trained models for inference.
-FROM python:3.8-slim
+# FROM python:3.8-slim
+FROM python:3.8
 
 WORKDIR /workspace
 COPY requirements.txt requirements.txt
